fix(token): tweak the dark mode (#87)

--- a/src/components/Skeleton/Skeleton/Skeleton.module.scss
+++ b/src/components/Skeleton/Skeleton/Skeleton.module.scss
@@ -16,6 +16,7 @@ $background-width: 240px;
 }
 
 :where(.skeleton) {
+  color-scheme: light;
   display: inline-block;
   width: var(--width-skeleton);
   height: var(--height-skeleton);
